src/main/java/com/example/TaxiApp/DTO/error/Response/CustomerNotMatchResponse.java
package com.example.TaxiApp.DTO.error.Response;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class CustomerNotMatchResponse {
    private String code;
    private String message;
}
